Revision history for Perl extension DTL::Fast.

1.608 - Tue 10 Feb 2015 12:49 MSK
	- Removed map usage in complicated loops

1.606 - Mon 09 Feb 2015 16:23 MSK
    - SSI tag behavior now is like in Django, fixes #26
    - ifchanged tag is now rendered on the first pass
    - ifchanged tag can now work without parameters (watching rendered content); not recommended, bad performance
    - new tag - warn
    - fixed bug with slicing indexes outside the array boundaries
    - implemented dynamic tags loading and preloading registering with register_tag, fixes #18
    - replaced some redundant methods with direct perl API calls
    - documented numberformat filter, fixes #10

1.605 - Wed 28 Jan 2015 18:27 MSK
    - Fixed spaces between equals in 'with' tag. Now tags may be multiline, fixes #7
    - Fixed filters behavior in with tag, if constant strings being used in assignment, fixes #8
    - Blocks now can be multi-line

1.604 - Tue 27 Jan 2015 20:18 MSK
    - Fixed bug when expression fails if variable name contains operator
    - Load tag is now accepts package names with or without quotes

1.602 - Sun 25 Jan 2015 20:18 MSK
    - Implemented and tested include .. with tag

1.05.6 - 2015-01-22
    - Removed changes from pod documentation
    - Fixed lvalue test for perl 5.10

1.05.5 - 2015-01-21
    - Changes file cleanup
    - Added filter numberformat, formats number like 12 345 678.9999999
    - Added DTL::Fast::Utils::is_lvalue method to check if method is lvalue. 
      Lvalue methods in context being invoked without context argument.
    - Fixed bugs with spaces in variables and filters

1.05.4 - 2015-01-20
    - Unknown block warning now displays template filename
    - Spaces in control blocks are not mandatory

1.05.3 - 2015-01-20
    - Context trying to traverse objects like hash if there is no method

1.05.2 - 2015-01-19
    - Fixed bug in C spaceless implementation for linux
    - Moved inheritance part into Template constructor