@@ -1,7 +1,6 @@
 package DTL::Fast::Tag::Verbatim;
 use strict; use utf8; use warnings FATAL => 'all'; 
 use parent 'DTL::Fast::Tag';  
-
 $DTL::Fast::TAG_HANDLERS{'verbatim'} = __PACKAGE__;
 
 use DTL::Fast::Text;
@@ -15,8 +14,8 @@ sub parse_parameters
     my $self = shift;
     $self->{'contents'} = DTL::Fast::Text->new();
     $self->{'last_tag'} = $self->{'parameter'} ?
-        sprintf( '{%% %s %s %%}', $self->get_close_tag, $self->{'parameter'})
-        : '{% endverbatim %}';
+        qr/\Qendverbatim\E\s+\Q$self->{'parameter'}\E/
+        : 'endverbatim';
     return $self;
 }
 
@@ -26,7 +25,7 @@ sub parse_next_chunk
     my $self = shift;
     my $chunk = shift @{$self->{'raw_chunks'}};
     
-    if( $chunk eq $self->{'last_tag'} )
+    if( $chunk =~ /^\{\%\s*$self->{'last_tag'}\s*\%\}$/six )
     {
         $self->{'raw_chunks'} = []; # this stops parsing
     }
